[package]
name = "relx"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
clap = { version = "4.5.17", features = ["derive", "env"] }
db_entity = { version = "0.1.0", path = "db/entity" }
db_migration = { version = "0.1.0", path = "db/migration" }
futures = "0.3.30"
prost = "0.13.2"
sea-orm = { version = "1.0.1", features = ["runtime-tokio-native-tls", "sqlx-postgres", "with-time"] }
tokio = { version = "1.40.0", features = ["full"] }
tonic = "0.12.2"

[build-dependencies]
tonic-build = "0.12.2"

[workspace]
members = [ "db/entity", "db/migration"]
